
namespace ConnectFour.Constants
{
    internal class PlayerConstant
    {
        internal const int MAXIMUM_TOKEN_NUMBER = 21;
        internal const int MAXIMUM_PLAYERS_NUMBER = 2;
    }
}
